Bug 370224 - Exported templates does not have any title and description
Summary: Exported templates does not have any title and description
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.0
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks: 347037
  Show dependency treegraph
 
Reported: 2016-10-06 22:45 UTC by Ralf Habacker
Modified: 2019-08-29 15:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1,5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2016-10-06 22:45:37 UTC
While working on bug 290473 it turned out that exported templates does not have any title, short and long description included. It would be nice to 

Reproducible: Always

Steps to Reproduce:
1. start kmymoney
2. create new file or export file as template
3. Inspect exported template file

Actual Results:  
The exported template file contains empty title, short and long description.

Expected Results:  
The user should be able to setup template title, short and long description before exporting.
Comment 1 Ralf Habacker 2016-10-06 23:46:49 UTC
Supporting these attributes looks very imported because with bug 290473 implemented it is now easy to list several exported templates into the template import dialog without being able to distinct them. Templates listed in the template import dialog are distinct by title and descriptions which is empty until this bug has been fixed.
Comment 2 Ralf Habacker 2017-05-25 10:03:34 UTC
Git commit dc0351fb5d28e1f6aafee0f08e8d6911311ac01d by Ralf Habacker.
Committed on 25/05/2017 at 10:03.
Pushed by habacker into branch '4.8'.

Fix 'Exported templates does not have any title and description'.
REVIEW: 129116

M  +21   -0    kmymoney/converter/mymoneytemplate.cpp
M  +4    -0    kmymoney/converter/mymoneytemplate.h
M  +2    -0    kmymoney/dialogs/CMakeLists.txt
A  +45   -0    kmymoney/dialogs/ktemplateexportdlg.cpp     [License: GPL (v2+)]
A  +42   -0    kmymoney/dialogs/ktemplateexportdlg.h     [License: GPL (v2+)]
A  +100  -0    kmymoney/dialogs/ktemplateexportdlg.ui
M  +11   -3    kmymoney/kmymoney.cpp

https://commits.kde.org/kmymoney/dc0351fb5d28e1f6aafee0f08e8d6911311ac01d