Fix 'Exported templates does not have any title and description'.

BUG: 370224
REVIEW: 129116